--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "cross-env": "^7.0.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-handlebars": "^7.0.7",
     "morgan": "^1.10.0",
     "nodemailer": "^6.9.1",
     "nodemailer-express-handlebars": "^6.1.0",
