--- a/package.json
+++ b/package.json
@@ -20,10 +20,8 @@
     "express": "^4.18.2",
     "express-handlebars": "^7.0.7",
     "morgan": "^1.10.0",
-    "node-path": "^0.0.3",
     "nodemailer": "^6.9.1",
     "nodemailer-express-handlebars": "^6.1.0",
-    "nodemon": "^2.0.22",
-    "path": "^0.12.7"
+    "nodemon": "^2.0.22"
   }
 }
