--- a/.github/workflows/build_deploy.yaml
+++ b/.github/workflows/build_deploy.yaml
@@ -19,25 +19,32 @@ jobs:
     
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
            
       - name: Build docker image
         run: |
           docker build . -t ${{ env.name }}:${{ env.stamp }}
-          
-      - name: Save docker image
-        run: |
-          docker save -o ${{ env.name }}.tar ${{ env.name }}:${{ env.stamp }}
-      
-      - name: Copy image to EC2
-        run: |
-          echo "${{ secrets.SSH_KEY }}" > ${key}
-          sudo chmod 400 ${key}
-          scp -i ${key} -o "StrictHostKeyChecking no" ${{ env.name }}.tar ${{ env.host }}:${{ env.name }}.tar
+
+      - name: Log in to registry
+        run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u $ --password-stdin
         
-      - name: Start image
+      - name: Push image
         run: |
-          ssh -i ${key} -o "StrictHostKeyChecking no" ${{ env.host }} ' \
-          sudo docker load -i '${{ env.name }}'.tar && \
-          docker rmi $(sudo docker images -q); \
-          '
+          IMAGE_ID=ghcr.io/${{ github.repository_owner }}/${{ env.name }}          
+          
+      # - name: Save docker image
+      #   run: |
+      #     docker save -o ${{ env.name }}.tar ${{ env.name }}:${{ env.stamp }}
+      
+      # - name: Copy image to EC2
+      #   run: |
+      #     echo "${{ secrets.SSH_KEY }}" > ${key}
+      #     sudo chmod 400 ${key}
+      #     scp -i ${key} -o "StrictHostKeyChecking no" ${{ env.name }}.tar ${{ env.host }}:${{ env.name }}.tar
+        
+      # - name: Start image
+      #   run: |
+      #     ssh -i ${key} -o "StrictHostKeyChecking no" ${{ env.host }} ' \
+      #     sudo docker load -i '${{ env.name }}'.tar && \
+      #     docker rmi $(sudo docker images -q); \
+      #     '
