--- a/.github/workflows/build_deploy.yaml
+++ b/.github/workflows/build_deploy.yaml
@@ -12,7 +12,7 @@ jobs:
   build:
     runs-on: ubuntu-22.04
     env:
-      name: "pizza-backend"
+      name: "ghcr.io/"${{ github.repository_owner }}"/pizza-backend"
       key: "ssh_key"
       stamp: ${GITHUB_SHA}
       host: ${{ secrets.ORACLE_USER }}"@"${{ secrets.ORACLE_IP }}
@@ -24,13 +24,13 @@ jobs:
       - name: Build docker image
         run: |
           docker build . -t ${{ env.name }}:${{ env.stamp }}
+          docker tag ${{ env.name }}:${{ env.stamp }} ${{ env.name }}:latest
 
       - name: Log in to registry
-        run: echo "${{ secrets.TOKEN }}" | docker login ghcr.io -u $ --password-stdin
+        run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u $ --password-stdin
         
       - name: Push image
         run: |
-            docker tag ${{ env.name }}:${{ env.stamp }} ${{ env.name }}:latest
             docker push ${{ env.name }}:latest
             docker push ${{ env.name }}:${{ env.stamp }}
           
