--- a/.github/workflows/build_deploy.yaml
+++ b/.github/workflows/build_deploy.yaml
@@ -37,19 +37,9 @@ jobs:
             docker push ${{ env.name }}:latest
             docker push ${{ env.name }}:${{ env.stamp }}
           
-      # - name: Save docker image
-      #   run: |
-      #     docker save -o ${{ env.name }}.tar ${{ env.name }}:${{ env.stamp }}
-      
-      # - name: Copy image to EC2
-      #   run: |
-      #     echo "${{ secrets.SSH_KEY }}" > ${key}
-      #     sudo chmod 400 ${key}
-      #     scp -i ${key} -o "StrictHostKeyChecking no" ${{ env.name }}.tar ${{ env.host }}:${{ env.name }}.tar
-        
-      # - name: Start image
-      #   run: |
-      #     ssh -i ${key} -o "StrictHostKeyChecking no" ${{ env.host }} ' \
-      #     sudo docker load -i '${{ env.name }}'.tar && \
-      #     docker rmi $(sudo docker images -q); \
-      #     '
+       - name: Start image
+         run: |
+            ssh -i ${key} -o "StrictHostKeyChecking no" ${{ env.host }} ' \
+            docker pull ${{ env.name }}:latest && \
+            docker compose -d -f ~/backend/docker-compose.yaml up; \
+            docker rmi $(sudo docker images -q)'
