--- a/.github/workflows/build_deploy.yaml
+++ b/.github/workflows/build_deploy.yaml
@@ -45,6 +45,7 @@ jobs:
       - name: Start image
         run: |
           ssh -i ${key} -o "StrictHostKeyChecking no" ${{ env.host }} ' \
-          docker pull ${{ env.name }}:latest && \
+          echo '${{ secrets.GITHUB_TOKEN }}' | docker login ghcr.io -u $ --password-stdin \
+          docker pull '${{ env.name }}':latest && \
           docker compose -d -f ~/backend/docker-compose.yaml up; \
           docker rmi $(sudo docker images -q)'
