--- a/.github/workflows/ssh_command.yaml
+++ b/.github/workflows/ssh_command.yaml
@@ -29,7 +29,7 @@ jobs:
       - name: Start image
         run: |
           ssh -i ${key} -o "StrictHostKeyChecking no" ${{ env.host }} ' \
-          echo echo '${{ secrets.GITHUB_TOKEN }}' | docker login ghcr.io -u $ --password-stdin; \
+          echo '${{ secrets.GITHUB_TOKEN }}' | docker login ghcr.io -u yevhennsorganization --password-stdin; \
           docker pull '${{ env.name }}':latest && \
           docker compose -f ~/backend/docker-compose.yaml up -d; \
           docker rmi $(sudo docker images -q)'
