--- a/.github/workflows/ssh_command.yaml
+++ b/.github/workflows/ssh_command.yaml
@@ -33,4 +33,4 @@ jobs:
           echo '${{ secrets.GITHUB_TOKEN }}' | docker login ghcr.io -u '${{ env.ghcr_user }}' --password-stdin; \
           docker pull '${{ env.name }}':latest && \
           docker compose -f ~/backend/docker-compose.yaml up -d; \
-          docker rmi $(sudo docker images -q);'
+          docker rmi $(sudo docker images -q) || true'
