--- a/.github/workflows/ssh_command.yaml
+++ b/.github/workflows/ssh_command.yaml
@@ -13,8 +13,7 @@ jobs:
     runs-on: ubuntu-22.04
     permissions:
       contents: read
-      packages: write
-      packages: delete
+      packages: write, delete
     env:
       name: ghcr.io/yevhennsorganization/pizza-backend
       key: "ssh_key"
