--- a/.github/workflows/ssh_command.yaml
+++ b/.github/workflows/ssh_command.yaml
@@ -21,10 +21,9 @@ jobs:
       host: ${{ secrets.ORACLE_USER }}"@"${{ secrets.ORACLE_IP }}
       ghcr_user: $(echo ${{ github.repository_owner }} | tr '[A-Z]' '[a-z]')
 
-    steps: 
     - uses: actions/delete-package-versions@v4
       with: 
-        package-name: 'pizza-backend'
+        package-name: ${GITHUB_REPOSITORY#*/}"
         package-type: 'container'
         min-versions-to-keep: 1
         ignore-versions: 'latest'
