--- a/.github/workflows/ssh_command.yaml
+++ b/.github/workflows/ssh_command.yaml
@@ -23,7 +23,7 @@ jobs:
     steps:
     - uses: actions/delete-package-versions@v4
       with: 
-        package-name: ${GITHUB_REPOSITORY#*/}"
+        package-name: '${GITHUB_REPOSITORY#*/}'
         package-type: 'container'
         min-versions-to-keep: 1
         ignore-versions: 'latest'
