--- a/.github/workflows/ssh_command.yaml
+++ b/.github/workflows/ssh_command.yaml
@@ -23,7 +23,7 @@ jobs:
     steps:
     - name: Build docker image
       run: |
-        echo ${GITHUB_REPOSITORY#*/}
+        echo ${GITHUB_REPOSITORY}
 
     # - uses: actions/delete-package-versions@v4
     #   with: 
