--- a/.github/workflows/build_deploy.yaml
+++ b/.github/workflows/build_deploy.yaml
@@ -11,9 +11,6 @@ on:
 jobs:
   build:
     runs-on: ubuntu-22.04
-    permissions:
-      contents: read
-      packages: write
     env:
       name: ghcr.io/yevhennsorganization/pizza-backend
       key: "ssh_key"
@@ -50,3 +47,11 @@ jobs:
           docker pull '${{ env.name }}':latest && \
           docker compose -f ~/backend/docker-compose.yaml up -d; \
           docker rmi $(sudo docker images -q) || true'
+
+      - name: Delete old packages
+        uses: actions/delete-package-versions@v4
+        with: 
+          package-name: 'pizza-backend'
+          package-type: 'container'
+          min-versions-to-keep: 1
+          ignore-versions: 'latest'
