--- a/.github/workflows/build_deploy.yaml
+++ b/.github/workflows/build_deploy.yaml
@@ -22,7 +22,7 @@ jobs:
       - name: Lint
         run: |
           npm ci
-          npm run build --if-present
+          npm run build
           npm run lint
 
   build:
