Lineter move in separete workflow

--- a/.github/workflows/build_deploy.yaml
+++ b/.github/workflows/build_deploy.yaml
@@ -1,31 +1,16 @@
 name: Deploy to Oracle
 
 on:
-  workflow_dispatch:
-  push:
-    branches: 
+  pull_request:
+    types:
+      - closed
+    branches:
       - main
     paths-ignore:
       - '.github/workflows/**'
 
 jobs:
-
-  lint:
-    runs-on: ubuntu-22.04
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-      - name: Use Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: '18.x'
-      - name: Lint
-        run: |
-          npm ci
-          npm run lint
-
   build:
-    needs: lint
     runs-on: ubuntu-22.04
     permissions:
       contents: read
