--- a/.github/workflows/build_deploy.yaml
+++ b/.github/workflows/build_deploy.yaml
@@ -2,9 +2,9 @@ name: Deploy to Oracle
 
 on:
   workflow_dispatch:
-  pull_request:
-    types:
-      - closed
+  push:
+    tags:
+      - v**
     branches:
       - main
     paths-ignore:
