--- a/.github/workflows/build_deploy.yaml
+++ b/.github/workflows/build_deploy.yaml
@@ -46,6 +46,7 @@ jobs:
           ignore-versions: 'latest'
 
   deploy:
+    if: jobs.build.result == success
     runs-on: ubuntu-22.04
     permissions:
       contents: read
